# uno

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  compose.yaml  pyproject.toml  setup.cfg  setup.py  uno-helper-ansible.mk  uno-helper-local.mk  uno-helper-ssh.mk  uno-helper.mk
.devcontainer/: devcontainer.json
.github/workflows/: _deb_build.yml  _install_test.yml  _release_badges.yml  _release_build.yml  _release_push.yml  _release_test.yml  _release_validate.yml  build_and_push_images.yml  build_and_test.yml  build_and_test_arm64.yml  build_and_test_deb.yml  ci-dev.yml  ci-nightly.yml  ci-pr-premerge.yml  ci-pr-test-full-begin.yml  ci-pr-test-full-completed.yml  ci-pr-test-full.yml  ci-pr-test.yml  ci-release.yml  ci.yml  ci_build.yml  ci_build_full.yml  ci_full.yml  cleanup_workflows.yml  deb_release.yml  dev-ci.yml  docker-image.yml  install_test.yml  install_test_default.yml  install_test_static.yml  nightly-ci.yml  pr-test.yml  pull_request.yml  pull_request_check_approval.yml  pull_request_closed.yml  push_images.yml  push_images_nightly.yml  push_images_release.yml  release-docker.yml  release.yml  (+18 more)
.pyconfig/: settings.py  settings.yml
ansible/: uno-check.yml  uno-install.yml  uvn-dist.yml  uvn-distribute.yml  uvn-start.retry  uvn-start.yml  uvn-stop.yml
ansible/templates/: uvn.profile
debian/: changelog  control  copyright  install  rules  uno-static.install  uno.install
debian/source/: options
docker/: Dockerfile  entrypoint.sh
docker/debian-builder/: Dockerfile
docker/debian-tester/: Dockerfile
docker/dev/: test_key.ed25519.key  test_key.ed25519.key.pub
docker/test/: Dockerfile
docs/: CNAME  cloud_provider.md  index.md  install
docs/man/: uvn.1
docs/manual/: Hello-UVN.md  Installation.md  Setup-Checklist.md  conf.py  index.rst  requirements.txt
docs/notes/: faq.md
libuno/: __init__.py  backbone.py  cell.py  cell_cfg.py  cfg.py  connext.py  deploy.py  docker.py  err.py  exception.py  exec.py  helpers.py  identity.py  install.py  ip.py  log.py  ns.py  particle.py  ping.py  psk.py  qr.py  reg.py  router_port.py  rs.py  strategy.py  tmplt.py  wg.py  www.py  www_api.py  yml.py
libuno/agent/: __init__.py  agent.py  agent_cell.py  agent_root.py  dds.py  dds_cell.py  dds_root.py  dds_rs.py  peer.py  peer_cb.py  peer_manager.py  proc.py  publisher.py  quagga.py  router.py  router_cell.py  router_root.py  vpn.py  vpn_cell.py  vpn_root.py
libuno/data/: __init__.py
libuno/gateway/: __init__.py  gateway.py
libuno/uvn/: __init__.py  cmd.py  cmd_agent.py  cmd_attach.py  cmd_builtin.py  cmd_create.py  cmd_deploy.py  cmd_drop.py  cmd_graph.py  cmd_info.py  cmd_install.py  cmd_nameserver.py  cmd_runner.py  cmd_view.py  uvn.py  uvn_fn.py
make/: uno-helper-ansible.mk  uno-helper-local.mk
man/: uvn.man  uvnd.profile.man
scripts/: ci-admin  cleanup_closed_pull_request.sh  cleanup_images_gh.py  cleanup_workflows.sh  debian_build.sh  tag_release_images.py  venv_install.sh
scripts/bundle/: pyinstaller.sh  uno
scripts/debian/: build.sh  update_changelog.sh
test/: python_env.sh  simple_validation.sh
test/docker_cell/: compose.yaml
test/install/: test_install_docker.py
test/integration/: conftest.py  test_int_agents_httpd.py  test_int_particles_basic.py  test_int_registry_redeploy.py  test_int_registry_sync.py  test_int_uvn_basic_cli.py  test_int_uvn_basic_spec.py  test_integration_agents.py  test_integration_basic.py  test_integration_cli.py  test_integration_particles.py  test_integration_registry.py
test/local_deploy/: _init_common.sh  _init_host.sh  _init_router.sh  experiment_lib.sh  experiment_local.sh  experiment_rpi.sh
test/unit/: test_time.py
test/uvn/: test_time.py
uno/agent/: agent.py  agent_net.py  agent_service.py  agent_static_service.py  agent_statistics.py  agent_syssvc.py  cell_agent.py  dds.py  dds_data.py  graph.py  html.py  lighttpd.py  peer.py  registry_agent.py  render.py  router.py  routes_monitor.py  runnable.py  systemd.py  systemd_service.py  tester.py  triggerable.py  triggerable_agent_service.py  uvn_net.py  uvn_peer.py  uvn_peers_list.py  uvn_peers_tester.py  webui.py  www.py
uno/cli/: cli_helpers.py  uno.py  uvn.py  uvn_net.py
uno/core/: ask.py  data.py  exec.py  htdigest.py  ip.py  log.py  monitor_thread.py  paired_map.py  pm_attr_list.py  qr.py  (+3 more)
www/: index.md
(+307 files in other folders)
