[tool.poetry]
name = "uno"
version = "0.1.0"
description = "Dynamic site-to-site VPNs"
authors = ["Andrea Sorbini <as@mentalsmash.org>"]
readme = "README.md"
license = "AGPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux"
]
packages = [
  { include = "uno" }
]

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.1.2"
python-gnupg = "^0.5.2"
PyYAML = "^6.0"
netifaces = "^0.11.0"
"rti.connext" = "^7.1.0"
termcolor = "^2.4.0"
networkx = "^3.2.1"
matplotlib = "^3.8.3"
sdnotify = "^0.3.2"
# bcrypt = "^4.1.2"

# Doc dependencies
docutils = "^0.18.1"
m2r = "^0.3.1"
mistune = "^0.8.4"
sphinx-autodoc-typehints = "^1.25.2"
sphinx-rtd-theme = "^1.3.0"
sphinxcontrib-programoutput = "^0.17"
sphinxemoji = "^0.2.0"
sphinx-tabs = "^3.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
uno = 'uno.cli.uno:main'
uvn-net = 'uno.cli.uvn_net:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
